@@ -31,10 +31,13 @@
 <p><a href="http://banshee-project.org/Main_Page">Banshee</a> is a music player for GNOME using Mono</p>
 
 <h2>Boxtream</h2>
-<p><a href="http://cortex.unice.fr/~jerome/boxtream/">Boxtream</a> is a project
-of hardware and software forming a mobile and autonomous video streaming and
-recording studio.</p>
-
+<p><a href="http://boxtream.unice.fr/">Boxtream</a> is a hardware and software
+project forming a mobile and autonomous video streaming and recording studio.
+It's an all in one assembly which may look similar to Newtek's Tricaster or
+Sony's Anycast, but running on entirely Free Software and open hardware, it is
+both easily extensible and simplifiable depending on your needs and your
+wealthiness to purchase hardware bricks.
+</p>
 
 <h2>BMPx</h2>
 <p><a href="http://bmpx.backtrace.info/site/BMPx_Homepage">BMPx</a> is a music player using GTK+ with a 'Winamp' like interface</p>
@@ -81,6 +84,13 @@ in any format supported by GStreamer.</p>
 
 <h2>GNOME Media</h2>
 <p><a href="http://ronald.bitfreak.net/gnome-media.php">GNOME Media</a> uses GStreamer for the volume control, sound recorder and cd player.</p>
+
+<h2>GNOME Subtitles</h2>
+<p><a href="http://gnome-subtitle.sourceforge.net">GNOME Subtitles</a>
+is a subtitle editor for the GNOME desktop. It supports the most common
+text-based subtitle formats and allows for subtitle editing, translation and
+synchronization.  It uses GStreamer for the video playback.
+</p>
 
 <h2>GMediaRender</h2>
 <p><a href="http://gmrender.nongnu.org/">GMediaRender</a> is a upnp client for 
